--- a/scss/style.scss
+++ b/scss/style.scss
@@ -250,6 +250,11 @@
       cursor: grab;
 
       .img {
+         @media (max-width:768px){
+            background-size: 200% 100%;
+            background-position: top;
+            height: 300px;
+         }
          display: block;
          height: 500px;
          background-position: center;
@@ -304,6 +309,11 @@
       }
 
       .owl-carousel {
+         @media (max-width:768px){
+            .owl-nav{
+               display: none;
+            }
+         }
          .owl-nav {
             margin: 0;
             height: 0;
@@ -435,6 +445,404 @@
       }
    }
 
+   .dth {
+      position: relative;
+
+      .bg {
+         @media (max-width:576px) {
+            width: 100%;
+         }
+
+         position: absolute;
+         top: 0;
+         bottom: 0;
+         left: 0;
+         width: 75%;
+         background-color: #ffa522;
+      }
+
+      .content {
+         position: relative;
+         z-index: 1;
+
+         .item-1 {
+            h3 {
+               font-size: 30px;
+               font-weight: 900;
+            }
+
+            p {
+               font-size: 16px;
+               letter-spacing: 0.5px;
+               text-align: justify;
+            }
+
+            h2 {
+               font-size: 36px;
+               font-weight: 900;
+               letter-spacing: 1px;
+               line-height: 1.3;
+               margin-bottom: 20px;
+               span:nth-child(1),
+               span:nth-child(3) {
+                  -webkit-text-stroke:1px #fff;
+                  color: #f95702;
+                  font-weight: 800;
+                  font-size: 36px;
+               }
+
+               span:nth-child(2),
+               span:nth-child(4) {
+                  font-weight: 400;
+                  margin-right: 20px;
+               }
+            }
+
+            a {
+               @media (max-width:576px) {
+                  position: unset;
+               }
+
+               position: absolute;
+               left: 15px;
+               bottom: -15px;
+               color: black;
+               font-style: italic;
+               text-decoration: none;
+               border-bottom: 1px solid black;
+               font-size: 14px;
+               letter-spacing: 1px;
+            }
+         }
+
+         .item-2 {
+            img {
+               border-radius: 10px;
+               box-shadow: 0 0 5px 2px #777;
+            }
+         }
+      }
+   }
+
+   .dtt {
+      position: relative;
+
+      .bg {
+         @media (max-width:576px) {
+            width: 100%;
+         }
+
+         position: absolute;
+         top: 0;
+         bottom: 0;
+         right: 0;
+         width: 75%;
+         background-color: rgba(235, 85, 5, 0.9);
+      }
+
+      .content {
+         position: relative;
+         z-index: 1;
+
+         .item-1 {
+            img {
+               border-radius: 10px;
+               box-shadow: 0 0 5px 2px #777;
+            }
+         }
+
+         .item-2 {
+            color: #fff;
+
+            h3 {
+               font-size: 30px;
+               font-weight: 900;
+               text-align: right;
+            }
+
+            p {
+               font-size: 16px;
+               letter-spacing: 0.5px;
+               text-align: justify;
+            }
+
+            h2 {
+               font-size: 36px;
+               font-weight: 900;
+               letter-spacing: 1px;
+               line-height: 1.3;
+
+               span:nth-child(2),
+               span:nth-child(4) {
+                  color: #000;
+                  font-weight: 400;
+                  margin-right: 20px;
+               }
+            }
+
+            a {
+               position: absolute;
+               right: 15px;
+               bottom: -15px;
+               color: white;
+               font-style: italic;
+               text-decoration: none;
+               border-bottom: 1px solid white;
+               font-size: 14px;
+               letter-spacing: 1px;
+            }
+         }
+      }
+   }
+
+   .support {
+      .item-1 {
+         height: 380px;
+         background-image: url(../img/banner-v.jpg);
+         background-size: cover;
+         background-repeat: no-repeat;
+         text-align: end;
+
+         h3 {
+            display: flex;
+            justify-content: end;
+            align-items: end;
+            line-height: 1;
+            font-size: 30px;
+            color: #f95702;
+            font-weight: 700;
+
+            img {
+               width: 200px;
+               margin-left: 10px;
+               margin-bottom: 4px;
+            }
+         }
+
+         p {
+            font-size: 30px;
+            color: #f95702;
+            font-weight: 700;
+
+            &:nth-child(2) {
+               margin-right: 115px;
+            }
+         }
+      }
+
+      .item-2 {
+         h3 {
+            font-size: 16px;
+            letter-spacing: 0.02em;
+            font-weight: 700;
+            margin-bottom: 20px;
+         }
+
+         .phone {
+            display: block;
+            text-decoration: none;
+            color: #5c5c5c;
+            background-color: #ffa522;
+            border-radius: 99px;
+            position: relative;
+            transition: all .5s;
+
+            &:hover {
+               background-color: #c27f1a;
+            }
+
+            i {
+               position: absolute;
+               top: 50%;
+               transform: translateY(-50%);
+               left: 20px;
+               font-size: 20px;
+            }
+
+            div {
+               text-align: center;
+               padding: 6px 0;
+
+               p {
+                  font-size: 30px;
+                  font-weight: 700;
+                  line-height: 1;
+                  letter-spacing: 1px;
+
+                  &:last-child {
+                     font-size: 13px;
+                     letter-spacing: normal;
+                  }
+               }
+            }
+         }
+
+         .location {
+            text-decoration: none;
+            color: #000;
+            font-size: 18px;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            padding: 15px 0;
+
+            i {
+               color: #f95702;
+               font-size: 40px;
+               margin-right: 10px;
+            }
+         }
+
+         .question {
+            position: relative;
+
+            .content {
+               position: absolute;
+               top: 0;
+               background-color: rgb(235, 235, 235);
+               border-radius: 30px;
+               padding: 15px 30px;
+               width: 100%;
+               z-index: 5;
+
+               button {
+                  background: transparent;
+                  border: none;
+                  display: flex;
+                  justify-content: space-between;
+                  padding: 0;
+                  width: 100%;
+                  text-align: left;
+
+                  &:hover {
+                     span {
+                        color: #f95702;
+                     }
+                  }
+
+                  i {
+                     color: #fff;
+                     font-size: 20px;
+                     line-height: 1;
+                     transition: all 0.5s;
+                  }
+               }
+
+               a {
+                  display: inline-block;
+                  text-decoration: none;
+                  font-size: 16px;
+                  font-weight: 700;
+                  color: #5c5c5c;
+                  transition: all .5s;
+                  margin: 5px 0;
+
+                  &:hover {
+                     color: #ffa522;
+                     border-bottom: 1px solid #ffa522;
+                  }
+               }
+            }
+         }
+      }
+   }
+
+   .vschonavg {
+      padding: 50px 0;
+      background-color: rgb(249, 87, 2);
+
+      .item-1 {
+         text-align: right;
+
+         h3 {
+            font-size: 20px;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            justify-content: end;
+            max-width: 240px;
+            margin-right: 0;
+            margin-left: auto;
+
+            i {
+               font-size: 40px;
+               color: #fff;
+               margin-left: 20px;
+            }
+
+            &:first-child {
+               border-bottom: 1px solid #fff;
+               padding-bottom: 10px;
+            }
+         }
+      }
+
+      .item-2 {
+         position: absolute;
+         left: 0;
+         width: 100%;
+         top: -75px;
+         height: 220px;
+         background-image: url(../img/bg-2.png);
+         background-position: center top;
+         background-size: 100%;
+         background-repeat: no-repeat;
+         text-align: center;
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+
+         h3 {
+            font-size: 38px;
+            letter-spacing: 1px;
+            font-weight: 400;
+            text-transform: uppercase;
+
+            &:last-child {
+               font-weight: 800;
+            }
+         }
+
+         @media (max-width:768px) {
+            top: -40px;
+            background: none;
+            position: unset;
+            height: auto;
+            color: #fff;
+         }
+
+         @media (max-width:992px) {
+            h3 {
+               font-size: 30px;
+            }
+         }
+      }
+
+      .item-3 {
+         text-align: left;
+
+         h3 {
+            font-size: 20px;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            max-width: 275px;
+
+            span {
+               font-size: 40px;
+               color: #fff;
+               margin-right: 20px;
+            }
+
+            &:first-child {
+
+               border-bottom: 1px solid #fff;
+               padding-bottom: 10px;
+            }
+         }
+      }
+   }
+
    .slide {
       .container {
          .content {
@@ -465,6 +873,7 @@
          display: flex;
          align-items: center;
          justify-content: center;
+
          a {
             display: inline-block;
             margin: 0 5px;
@@ -502,7 +911,8 @@
    .footer-bottom {
       background-color: #252525;
       border-top: 1px solid rgba(255, 167, 34, 0.5);
-      a{
+
+      a {
          color: #a7a7a7;
          text-decoration: none;
       }
